run appwrite from central db

--- a/appwrite/.env.example
+++ b/appwrite/.env.example
@@ -30,12 +30,12 @@ _APP_REDIS_PORT=6379
 _APP_REDIS_USER=
 _APP_REDIS_PASS=
 
-_APP_DB_HOST=appwrite-mariadb
+_APP_DB_HOST=mariadb
 _APP_DB_PORT=3306
-_APP_DB_SCHEMA=appwrite
-_APP_DB_USER=user
-_APP_DB_PASS=password
-_APP_DB_ROOT_PASS=rootsecretpassword
+_APP_DB_SCHEMA=db_appwrite
+_APP_DB_USER=db_appwrite
+_APP_DB_PASS=# SET DB USER PASSWORD
+_APP_DB_ROOT_PASS=# SET DB ROOT PASSWORD
 
 _APP_INFLUXDB_HOST=appwrite-influxdb
 _APP_INFLUXDB_PORT=8086
