--- a/authelia/.env.example
+++ b/authelia/.env.example
@@ -2,5 +2,6 @@
 AUTHELIA_JWT_SECRET=
 AUTHELIA_SESSION_SECRET=
 AUTHELIA_STORAGE_ENCRYPTION_KEY=
+AUTHELIA_STORAGE_MYSQL_PASSWORD=
 AUTHELIA_NOTIFIER_SMTP_PASSWORD=
 AUTHELIA_AUTHENTICATION_BACKEND_LDAP_PASSWORD=
