try a different build

--- a/lldap/docker-compose.yml
+++ b/lldap/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3"
 
 services:
   ldap:
-    image: nitnelave/lldap:stable
+    image: nitnelave/lldap:latest-alpine
     container_name: ldap
     restart: unless-stopped
     security_opt:
