--- a/minio/docker-compose.yml
+++ b/minio/docker-compose.yml
@@ -26,11 +26,19 @@ services:
       MINIO_ROOT_PASSWORD: ${MINIO_ROOT_PASSWORD:?error}
       MINIO_SERVER_URL: https://s3.castelnuovo.dev
       MINIO_BROWSER_REDIRECT_URL: https://s3-console.castelnuovo.dev
-      MINIO_KMS_KES_ENDPOINT: https://s3-kes:7373
-      MINIO_KMS_KES_CAPATH: /kes/server.crt
-      MINIO_KMS_KES_KEY_FILE: /kes/client.key
-      MINIO_KMS_KES_CERT_FILE: /kes/client.crt
-      MINIO_KMS_KES_KEY_NAME: default-key
+
+      MINIO_IDENTITY_LDAP_SERVER_ADDR: ldap:389
+      MINIO_IDENTITY_LDAP_LOOKUP_BIND_DN: cn=admin,dc=castelnuovo,dc=xyz
+      MINIO_IDENTITY_LDAP_USER_DN_SEARCH_BASE_DN: ou=people,dc=castelnuovo,dc=xyz
+      MINIO_IDENTITY_LDAP_USER_DN_SEARCH_FILTER: (uid=%s)
+      MINIO_IDENTITY_LDAP_LOOKUP_BIND_PASSWORD: ${MINIO_IDENTITY_LDAP_LOOKUP_BIND_PASSWORD:?error}
+      MINIO_IDENTITY_LDAP_SERVER_INSECURE: on
+
+      # MINIO_KMS_KES_ENDPOINT: https://s3-kes:7373
+      # MINIO_KMS_KES_CAPATH: /kes/server.crt
+      # MINIO_KMS_KES_KEY_FILE: /kes/client.key
+      # MINIO_KMS_KES_CERT_FILE: /kes/client.crt
+      # MINIO_KMS_KES_KEY_NAME: default-key
     volumes:
       - ./s3-kes:/kes
       - ./s3-minio:/data
