--- a/minio/docker-compose.yml
+++ b/minio/docker-compose.yml
@@ -28,7 +28,7 @@ services:
       MINIO_BROWSER_REDIRECT_URL: https://s3-console.castelnuovo.dev
 
       MINIO_IDENTITY_LDAP_SERVER_ADDR: ldap:389
-      MINIO_IDENTITY_LDAP_LOOKUP_BIND_DN: cn=admin,dc=castelnuovo,dc=xyz
+      MINIO_IDENTITY_LDAP_LOOKUP_BIND_DN: cn=admin,ou=people,dc=castelnuovo,dc=xyz
       MINIO_IDENTITY_LDAP_USER_DN_SEARCH_BASE_DN: ou=people,dc=castelnuovo,dc=xyz
       MINIO_IDENTITY_LDAP_USER_DN_SEARCH_FILTER: (uid=%s)
       MINIO_IDENTITY_LDAP_LOOKUP_BIND_PASSWORD: ${MINIO_IDENTITY_LDAP_LOOKUP_BIND_PASSWORD:?error}
