--- a/vault/docker-compose.yml
+++ b/vault/docker-compose.yml
@@ -17,8 +17,8 @@ services:
       - ./data:/vault/file
       - ./config:/vault/config
     environment:
-      VAULT_ADDR: http://127.0.0.1:8200
-      VAULT_API_ADDR: http://127.0.0.1:8200
+      VAULT_ADDR: https://vault.castelnuovo.dev
+      VAULT_API_ADDR: https://vault.castelnuovo.dev
     entrypoint: vault server -config=/vault/config/vault.json
     cap_add:
       - IPC_LOCK
