--- a/traefik/config.yml
+++ b/traefik/config.yml
@@ -43,7 +43,7 @@ http:
     vosstraat:
       loadBalancer:
         servers:
-          - url: https://vosstraat.external.castelnuovo.xyz
+          - url: https://traefik:fvo1fTODkA@vosstraat.external.castelnuovo.xyz
 
   middlewares:
     # Authelia guard
