--- a/teleport/docker-compose.yml
+++ b/teleport/docker-compose.yml
@@ -14,6 +14,7 @@ services:
       traefik.http.routers.teleport.entryPoints: https
       traefik.http.services.teleport.loadbalancer.server.port: 3080
       traefik.http.services.teleport.loadbalancer.server.scheme: https
+      com.centurylinklabs.watchtower.monitor-only: true
     volumes:
       - ./config:/etc/teleport
       - ./data:/var/lib/teleport
