--- a/watchtower/docker-compose.yml
+++ b/watchtower/docker-compose.yml
@@ -11,8 +11,7 @@ services:
       - /var/run/docker.sock:/var/run/docker.sock
     environment:
       WATCHTOWER_CLEANUP: true
-      WATCHTOWER_LABEL_ENABLE: true
-
+      WATCHTOWER_MONITOR_ONLY: true
       WATCHTOWER_NOTIFICATIONS: email
       WATCHTOWER_NOTIFICATION_EMAIL_TO: luca@castelnuovo.dev
       WATCHTOWER_NOTIFICATION_EMAIL_FROM: watchtower@email.castelnuovo.dev
