--- a/minio/docker-compose.yml
+++ b/minio/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3"
 
 services:
   s3:
-    image: minio/minio
+    image: minio/minio:latest
     container_name: s3
     restart: unless-stopped
     security_opt:
