--- a/plausible/docker-compose.yml
+++ b/plausible/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3"
 
 services:
   mail:
-    image: bytemark/smtp
+    image: bytemark/smtp:latest
     restart: always
     networks:
       - stats_internal
