--- a/traefik/config.yml
+++ b/traefik/config.yml
@@ -18,6 +18,12 @@ http:
       rule: "Host(`nas.castelnuovo.dev`)"
       service: nas
 
+    vosstraat:
+      entryPoints:
+        - https
+      rule: "Host(`vosstraat.castelnuovo.dev`)"
+      service: vosstraat
+
   services:
     proxmox:
       loadBalancer:
@@ -34,10 +40,27 @@ http:
         servers:
           - url: https://nas.local.castelnuovo.xyz:5001
 
+    vosstraat:
+      loadBalancer:
+        servers:
+          - url: https://vosstraat.external.castelnuovo.xyz
+
   middlewares:
+    # Authelia guard
     auth:
       forwardauth:
         address: http://authelia:9091/api/verify?rd=https://authelia.castelnuovo.dev/
+        trustForwardHeader: true
+        authResponseHeaders:
+          - Remote-User
+          - Remote-Groups
+          - Remote-Name
+          - Remote-Email
+
+    # Authelia basic auth guard
+    auth-basic:
+      forwardauth:
+        address: http://authelia:9091/api/verify?auth=basic
         trustForwardHeader: true
         authResponseHeaders:
           - Remote-User
