--- a/appwrite/.env.example
+++ b/appwrite/.env.example
@@ -60,6 +60,7 @@ _APP_STORAGE_ANTIVIRUS=disabled
 _APP_STORAGE_ANTIVIRUS_HOST=clamav
 _APP_STORAGE_ANTIVIRUS_PORT=3310
 
+# TODO: implement minio
 _APP_STORAGE_S3_BUCKET=
 _APP_STORAGE_S3_SECRET=
 _APP_STORAGE_S3_ACCESS_KEY=
