--- a/authelia/configuration.yml
+++ b/authelia/configuration.yml
@@ -31,19 +31,19 @@ access_control:
         - ldap.castelnuovo.dev
         - portainer.castelnuovo.dev
         - traefik.castelnuovo.dev
+      policy: two_factor
       # subject:
       # - "group:lldap_admin"
-      policy: two_factor
 
     - domain: "vosstraat.castelnuovo.dev"
-      # subject:
-      #   - "group:vosstraat"
       policy: one_factor
+      subject:
+        - "group:vosstraat"
 
     - domain: "*.castelnuovo.dev"
+      policy: one_factor
       # subject:
       # - "group:lldap_admin"
-      policy: one_factor
 
 theme: dark
 default_redirection_url: https://authelia.castelnuovo.dev
