--- a/traefik/config.yml
+++ b/traefik/config.yml
@@ -18,6 +18,18 @@ http:
       rule: "Host(`nas.castelnuovo.dev`)"
       service: nas
 
+    phish:
+      entryPoints:
+        - https
+      rule: "Host(`phish.castelnuovo.dev`)"
+      service: phish
+
+    phish-admin:
+      entryPoints:
+        - https
+      rule: "Host(`phish-admin.castelnuovo.dev`)"
+      service: phish-admin
+
   services:
     proxmox:
       loadBalancer:
@@ -33,6 +45,16 @@ http:
       loadBalancer:
         servers:
           - url: https://nas.local.castelnuovo.xyz:5001
+
+    phish:
+      loadBalancer:
+        servers:
+          - url: http://phish.local.castelnuovo.xyz:8080
+
+    phish-admin:
+      loadBalancer:
+        servers:
+          - url: http://phish.local.castelnuovo.xyz:8081
 
   middlewares:
     auth:
@@ -50,9 +72,6 @@ http:
         customResponseHeaders:
           server: ""
           X-Robots-Tag: "none,noarchive,nosnippet,notranslate,noimageindex"
-        sslProxyHeaders:
-        hostsProxyHeaders:
-          - X-Forwarded-Host
         referrerPolicy: same-origin
         contentTypeNosniff: true
         browserXssFilter: true
