--- a/shlink/docker-compose.yml
+++ b/shlink/docker-compose.yml
@@ -8,6 +8,7 @@ services:
     security_opt:
       - no-new-privileges:true
     networks:
+      - database-net
       - traefik-proxy
     labels:
       traefik.enable: true
@@ -26,6 +27,9 @@ services:
       DEFAULT_BASE_URL_REDIRECT: https://lucacastelnuovo.nl
 
 networks:
+  database-net:
+    driver: bridge
+    external: true
   traefik-proxy:
     driver: bridge
     external: true
