--- a/authelia/configuration.yml
+++ b/authelia/configuration.yml
@@ -9,6 +9,7 @@ access_control:
         - s3-console.castelnuovo.dev
         - backend.castelnuovo.dev
         - vault.castelnuovo.dev
+        - invoices.castelnuovo.dev
       policy: bypass
 
     - domain: email.castelnuovo.dev
