--- a/invoices/.gitignore
+++ b/invoices/.gitignore
@@ -2,3 +2,13 @@
 !.gitignore
 !docker-compose.yml
 !.env.example
+!storage
+!storage/app
+!storage/app/public
+!storage/fonts
+!storage/fonts/.gitkeep
+!storage/framework
+!storage/framework/cache
+!storage/framework/sessions
+!storage/framework/views
+!storage/logs
