--- a/traefik/config.yml
+++ b/traefik/config.yml
@@ -18,6 +18,12 @@ http:
       rule: "Host(`nas.castelnuovo.dev`)"
       service: nas
 
+    coolify:
+      entryPoints:
+        - https
+      rule: "Host(`coolify.castelnuovo.dev`)"
+      service: coolify
+
   services:
     proxmox:
       loadBalancer:
@@ -33,6 +39,11 @@ http:
       loadBalancer:
         servers:
           - url: https://nas.local.castelnuovo.xyz:5001
+
+    coolify:
+      loadBalancer:
+        servers:
+          - url: https://coolify.local.castelnuovo.xyz:3000
 
   middlewares:
     auth:
