--- a/traefik/traefik.yml
+++ b/traefik/traefik.yml
@@ -72,7 +72,7 @@ providers:
     endpoint: "unix:///var/run/docker.sock"
 
 log:
-  level: INFO # ERROR
+  level: ERROR
 
 certificatesResolvers:
   letsencrypt:
